# ParMETIS

./: .gitmodules  CMakeLists.txt  metis.h.in  parmetis-config.cmake
